替换base64包